new model added... all for not, will have to create new solution

--- a/TumorTaskforce-Research/TumorTaskforce-Research/Web.config
+++ b/TumorTaskforce-Research/TumorTaskforce-Research/Web.config
@@ -7,7 +7,8 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="MySQL" type="MySql.Data.MySqlClient.MySqlConfiguration, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></configSections>
+    <section name="MySQL" type="MySql.Data.MySqlClient.MySqlConfiguration, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -120,9 +121,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="healthEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=Ape06Crazy;persistsecurityinfo=True;database=health&quot;" providerName="System.Data.EntityClient" />
     <remove name="LocalMySqlServer" />
     <add connectionString="" name="LocalMySqlServer" providerName="MySql.Data.MySqlClient" />
+    <add name="healthEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=Ape06Crazy;persistsecurityinfo=True;database=health&quot;" providerName="System.Data.EntityClient" />
+    <add name="tumorDBEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tumorserver.database.windows.net;initial catalog=tumorDB;persist security info=True;user id=taskforce;password=Password2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
@@ -136,7 +138,7 @@
       <add description=".Net Framework Data Provider for MySQL" invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
-<MySQL>
+  <MySQL>
     <Replication>
       <ServerGroups>
         <Group name="Fabric" groupType="MySql.Fabric.FabricServerGroup, MySql.Fabric.Plugin">
@@ -146,4 +148,5 @@
         </Group>
       </ServerGroups>
     </Replication>
-  </MySQL></configuration>
+  </MySQL>
+</configuration>
