review of health systems can now accept strings not chars

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Web.config
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Web.config
@@ -63,7 +63,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="tumorDBEntities" connectionString="metadata=res://*/tumorDB-model.csdl|res://*/tumorDB-model.ssdl|res://*/tumorDB-model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tumorserver.database.windows.net;initial catalog=tumorDB;persist security info=True;user id=taskforce;password=Password2017;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="tumorDBEntities" connectionString="metadata=res://*/tumorDB-model.csdl|res://*/tumorDB-model.ssdl|res://*/tumorDB-model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tumorserver.database.windows.net;initial catalog=tumorDB;persist security info=True;user id=taskforce;password=Password2017;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
