--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -327,6 +327,7 @@
     <Content Include="Views\OtherMedsPivots\Index.cshtml" />
     <Content Include="Views\Patients\Compare.cshtml" />
     <Content Include="Views\Patients\Results.cshtml" />
+    <Content Include="Views\Home\Manage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
