--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -328,6 +328,11 @@
     <Content Include="Views\Patients\Compare.cshtml" />
     <Content Include="Views\Patients\Results.cshtml" />
     <Content Include="Views\Home\Manage.cshtml" />
+    <Content Include="Views\PossibleSymptoms\CreateFromPatient.cshtml" />
+    <Content Include="Views\PossibleTreatments\CreateFromPatient.cshtml" />
+    <Content Include="Views\PossibleHealthFactors\CreateFromPatient.cshtml" />
+    <Content Include="Views\PossibleOtherMeds\CreateFromPatient.cshtml" />
+    <Content Include="Views\Home\FK_Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
