--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -333,6 +333,7 @@
     <Content Include="Views\PossibleHealthFactors\CreateFromPatient.cshtml" />
     <Content Include="Views\PossibleOtherMeds\CreateFromPatient.cshtml" />
     <Content Include="Views\Home\FK_Error.cshtml" />
+    <Content Include="Views\Patients\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
