--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/packages.config
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/packages.config
@@ -31,5 +31,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.35.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
