--- a/TumorTaskforce_Webapp_1/StringLibraryTest/StringLibraryTest.csproj
+++ b/TumorTaskforce_Webapp_1/StringLibraryTest/StringLibraryTest.csproj
@@ -12,9 +12,9 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="2.35.0" />
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.19.1" />
+    <PackageReference Include="Selenium.Support" Version="3.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.8.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="2.35.0" />
-    <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
