slight changes to behav tests

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -194,7 +194,7 @@
     <Compile Include="HealthFactorsPivot.cs">
       <DependentUpon>tumorDB-model.tt</DependentUpon>
     </Compile>
-    <Compile Include="NavigateToPatient.cs" />
+    <Compile Include="BehavTests.cs" />
     <Compile Include="OtherMedsPivot.cs">
       <DependentUpon>tumorDB-model.tt</DependentUpon>
     </Compile>
