--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -558,6 +558,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\Delete.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
