--- a/TumorTaskforce_Webapp_1/UnitTestProject1/packages.config
+++ b/TumorTaskforce_Webapp_1/UnitTestProject1/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="NUnit" version="3.9.0" targetFramework="net461" />
 </packages>
