Compare is all set up, along with a new type of patient, "compare patient", i.e. a patient created by the comparison tool and stored for users to re-visit them. these patients do not appear in the main patient directory and will not be called by the comparison algorithm. Also, a moderate amount of RBAC adjustments

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -519,7 +519,6 @@
     <Content Include="Views\OtherMedsPivots\Details.cshtml" />
     <Content Include="Views\OtherMedsPivots\Edit.cshtml" />
     <Content Include="Views\OtherMedsPivots\Index.cshtml" />
-    <Content Include="Views\Patients\Compare.cshtml" />
     <Content Include="Views\Patients\Results.cshtml" />
     <Content Include="Views\Home\Manage.cshtml" />
     <Content Include="Views\PossibleSymptoms\CreateFromPatient.cshtml" />
@@ -560,6 +559,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Patients\CompIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
