--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1.csproj
@@ -367,6 +367,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\dark_logo_transparent.png" />
     <Content Include="Images\Mabel.jpg" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
